--- a/config-services/src/main/resources/application.properties
+++ b/config-services/src/main/resources/application.properties
@@ -1,3 +1,4 @@
 server.port=8888
 spring.application.name=config-services
-spring.cloud.config.server.git.uri=https://github.com/BeidjaCheikh/config-repository.git
+spring.cloud.config.server.git.uri=https://github.com/BeidjaCheikh/Gestion_Reservation.git
+spring.cloud.config.server.git.search-paths=configs-repository
