--- a/reservation-service/src/main/resources/application.properties
+++ b/reservation-service/src/main/resources/application.properties
@@ -1,3 +1,5 @@
 server.port=8882
 spring.application.name=reservation-service
 spring.config.import=optional:configserver:http://localhost:8888
+spring.security.oauth2.resourceserver.jwt.issuer-uri=http://localhost:8080/realms/reservation-realm
+spring.security.oauth2.resourceserver.jwt.jwk-set-uri=http://localhost:8080/realms/reservation-realm/protocol/openid-connect/certs
